# models/connectivity_check_nic.go
@@ -1,0 +1,48 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ConnectivityCheckNic connectivity check nic
+// swagger:model connectivity-check-nic
+type ConnectivityCheckNic struct {
+
+	// ip addresses
+	IPAddresses []string `json:"ip-addresses"`
+
+	// mac
+	Mac string `json:"mac,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+}
+
+// Validate validates this connectivity check nic
+func (m *ConnectivityCheckNic) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ConnectivityCheckNic) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ConnectivityCheckNic) UnmarshalBinary(b []byte) error {
+	var res ConnectivityCheckNic
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
