# models/connectivity_check_node.go
@@ -1,0 +1,101 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	strfmt "github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// ConnectivityCheckNode connectivity check node
+// swagger:model connectivity-check-node
+type ConnectivityCheckNode struct {
+
+	// nics
+	Nics []*ConnectivityCheckNic `json:"nics"`
+
+	// node id
+	// Format: uuid
+	NodeID strfmt.UUID `json:"node-id,omitempty"`
+}
+
+// Validate validates this connectivity check node
+func (m *ConnectivityCheckNode) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateNics(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateNodeID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConnectivityCheckNode) validateNics(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Nics) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Nics); i++ {
+		if swag.IsZero(m.Nics[i]) { // not required
+			continue
+		}
+
+		if m.Nics[i] != nil {
+			if err := m.Nics[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("nics" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *ConnectivityCheckNode) validateNodeID(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.NodeID) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("node-id", "body", "uuid", m.NodeID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ConnectivityCheckNode) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ConnectivityCheckNode) UnmarshalBinary(b []byte) error {
+	var res ConnectivityCheckNode
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
